# IMT-Optimisation

./: 01_base_initialisee.c  01bis base optimisee.c  01ter base optimisee.c  02_ligne_horizontale.c  03_ligne_verticale.c  04_ligne_oblique.c  05_mires_raw_gris.c  06_BMP_Read_Write.c  06bis_BMP_Lumiere_contraste.c  07_Mesure_temps.c  07_time_mesure.c  08_Lumiere_contraste.c  CMakeLists.txt  README.md  base.c  base_2.c  day_one_base_2.c  time_measure.h
ANAEL_CHARDAN_OPTIMISATION/: CMakeLists.txt  README.txt
ANAEL_CHARDAN_OPTIMISATION/01-Mire/: 01_Mire.c
ANAEL_CHARDAN_OPTIMISATION/02-Decoupage/: 02_decoupage.c  time_measure.h
ANAEL_CHARDAN_OPTIMISATION/03_Fruit/src/: Main.java
ANAEL_CHARDAN_OPTIMISATION/03_Fruit/src/legume/: AbstractLegume.java  Avocat.java  Carotte.java  ChouxFleur.java  Legume.java  PommeDeTerre.java  Tomate.java  Unit.java
ANAEL_CHARDAN_OPTIMISATION/common/: bmp.h  time_mesure.c
DS 2016/Code fourni/02 subsampling/: time_measure.h
DS_2016/Code_fourni/01_Mire/: 01_Mire.c  time_measure.h  time_mesure.c
DS_2016/Code_fourni/02 subsampling/: 02_subsampling.c
DS_2016/Code_fourni/Evaluation Optimisation EMN-2016.11.04/03 Etudiants/src/: Etudiant.java
common/: 07_time_mesure.c  07_time_mesure.h  08_time_mesure.c  bmp.c  image_utils.c  image_utils.h  time_mesure.c
image_processing_samples/: 06bis BMP Lumiere contraste.c
java/01-Pele mele/src/: Tremplin.java  maClasse.java
java/02-Héritage NOK/src/: Carre.java  Cercle.java  Forme.java  Rectangle.java  Tremplin.java
java/03-Héritage GUI KO/src/: HeritageGUIKO.java
java/03-Héritage GUI OK/src/: HeritageGUIOK.java
java/04-Delegate (Stream)/src/: ClassicMethod.java  DelegateMain.java  DelegateMethod.java
java/04-Delegate/src/: ClassicMethod.java  DelegateMain.java  DelegateMethod.java
